--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ prefix=/usr/local
 
 [bdist_rpm]
 provides=SMHI-SAF-pycoast
-requires=pyshp python-imaging
+requires=pyshp python-imaging SMHI-SAF-aggdraw
 no-autoreq=True
 release=20140121-1
 packager = Martin Raspaud <martin.raspaud@smhi.se>
